<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/icon2"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="20sp"
        android:alpha="0"
        tools:alpha="1"
        android:textStyle="bold"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textSize="14sp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/dibuatOleh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/about"
        android:text="@string/dibuat_oleh" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/img_2"
        android:text="@string/nama" />

    <TextView
        android:id="@+id/npm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:text="@string/npm" />

    <ImageView
        android:id="@+id/img_2"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:src="@drawable/img12"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dibuatOleh"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_lanjutkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/lanjutkan"
        app:layout_constraintTop_toBottomOf="@id/npm" />

</androidx.constraintlayout.widget.ConstraintLayout>